--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,23 @@ extra:
     - icon: fontawesome/brands/twitter 
       link: https://twitter.com/zzfancitizen
       name: zzfancitizen on Twitter
+  analytics: 
+    provider: google
+    property: G-PWJFFJEZ8T
+  feedback:
+    title: Was this page helpful?
+    ratings:
+      - icon: material/emoticon-happy-outline
+        name: This page was helpful
+        data: 1
+        note: >-
+          Thanks for your feedback!
+      - icon: material/emoticon-sad-outline
+        name: This page could be improved
+        data: 0
+        note: >- 
+          Thanks for your feedback! Help us improve this page by
+          using our <a href="..." target=_blank>feedback form</a>.
 
 repo_name: zzfancitizen/CFA-LEVELI
 repo_url: https://github.com/zzfancitizen/CFA-LEVELI
