--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,9 @@ extra:
           Thanks for your feedback! Help us improve this page by
           using our <a href="..." target=_blank>feedback form</a>.
 
+repo_name: zzfancitizen/study
+repo_url: https://github.com/zzfancitizen/study
+
 markdown_extensions:
   - abbr
   - admonition
